# WFP_tech_assessment

./: .gitignore  README.md  justfile  pyproject.toml
data/: Technical Assignment_Data_dev.xlsx  Technical Assignment_Data_full.xlsx  Technical Assignment_Data_tricks.xlsx
instructions/: SCDO_Technical Assessment_dev_2026.docx  assessment.md
notebooks/: 03_executive_summary.ipynb  check_transfo.csv  claude_missing_cat.csv  export_charts_for_summary.py
notebooks/_archive/: 01_data_exploration.ipynb
notebooks/charts/: q1_data.csv  q3_data.csv  q4_out_of_stock_dates.csv
prompts/: exec_summary.md
